--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,16 +1,16 @@
 # Base Image
-FROM alpine:latest
+FROM python:3.11-slim
 
-# Bash setup
-RUN apk add --no-cache bash
-RUN sed -i 's/\/bin\/ash/\/bin\/bash/g' /etc/passwd
-
-# Node.js Setup
-RUN apk add --update nodejs npm
+# Install dos2unix
+RUN apt-get update && apt-get install -y dos2unix
 
 # Create app directory
 WORKDIR /root/workspace
 
+# # Copy in .bashrc
+# COPY .devcontainer/.bashrc /root/.bashrc
+# COPY .devcontainer/.bash_aliases /root/.bash_aliases
+# COPY .devcontainer/.bash_functions /root/.bash_functions
+
 # Expose Ports
 EXPOSE 3000
-RUN 
